# vanessa_project1

./: README.md  pyproject.toml
.github/workflows/: main.yml
docs/: report.ipynb
src/recipe_book_project_vanessalulo/: __init__.py  ingredients.py  recipes.py
src/recipe_book_project_vanessalulo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py  test_recipes.py
